build: install eslint and prettier and make the formatting changes

--- a/angular.json
+++ b/angular.json
@@ -93,9 +93,18 @@
             "styles": ["client/src/styles.scss"],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": ["client/**/*.ts", "client/**/*.html"]
+          }
         }
       }
     }
   },
-  "defaultProject": "client"
+  "defaultProject": "client",
+  "cli": {
+    "defaultCollection": "@angular-eslint/schematics"
+  }
 }
