test: correctly run the test for the server

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "test:server": "jest --selectProjects server",
-    "test:client": "jest --selectProjects client",
+    "test:server": "jest ./server",
+    "test:client": "jest ./client",
     "clean": "rm -rf ./dist/api && rm -rf ./dist/public/",
     "cp:www": "mkdir .\\dist\\api\\bin && cp .\\server\\bin\\www .\\dist\\api\\bin\\",
     "dev": "concurrently -k \"tsc -p ./server/tsconfig.api.json -w\" \"cd ./dist/api && nodemon -r ./bin/www --watch\" \"ng build --watch\"",
