--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "cp:www": "mkdir .\\dist\\api\\bin && cp .\\server\\bin\\www .\\dist\\api\\bin\\",
     "dev": "concurrently -k \"tsc -p ./server/tsconfig.api.json -w\" \"cd ./dist/api && nodemon -r ./bin/www --watch\" \"ng build --watch\"",
     "lint": "ng lint",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "private": true,
   "dependencies": {
@@ -33,19 +36,21 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.9",
-    "@angular-eslint/builder": "12.5.0",
-    "@angular-eslint/eslint-plugin": "12.5.0",
-    "@angular-eslint/eslint-plugin-template": "12.5.0",
-    "@angular-eslint/schematics": "12.5.0",
-    "@angular-eslint/template-parser": "12.5.0",
+    "@angular-eslint/builder": "^12.5.0",
+    "@angular-eslint/eslint-plugin": "^12.5.0",
+    "@angular-eslint/eslint-plugin-template": "^12.5.0",
+    "@angular-eslint/schematics": "^12.5.0",
+    "@angular-eslint/template-parser": "^12.5.0",
     "@angular/cli": "~12.2.9",
     "@angular/compiler-cli": "~12.2.0",
+    "@cypress/schematic": "^1.5.1",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.28.2",
-    "@typescript-eslint/parser": "4.28.2",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "concurrently": "^6.3.0",
+    "cypress": "^8.6.0",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -54,7 +59,7 @@
     "nodemon": "^2.0.13",
     "prettier": "^2.4.1",
     "supertest": "^6.1.6",
-    "ts-node": "^10.2.1",
+    "ts-node": "^10.3.0",
     "typescript": "~4.3.5"
   }
 }
