build: improve some npm scripts and prevent test related files from getting into the build

--- a/server/tsconfig.api.json
+++ b/server/tsconfig.api.json
@@ -10,5 +10,6 @@
     "types": ["node"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
-  }
+  },
+  "exclude": ["jest.config.ts", "**/*.spec.ts"]
 }
