build: create docker compose file for running the built version of the app and add some npm scripts

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "clean": "rm -rf ./dist/api && rm -rf ./dist/public/",
-    "cp:www": "mkdirp ./dist/api/bin && cp ./server/bin/www ./dist/api/bin/"
+    "cp:www": "mkdirp ./dist/api/bin && cp ./server/bin/www ./dist/api/bin/",
+    "delete:lockfile": "rm -f ./node_modules/@angular/compiler-cli/ngcc/ngcc_lock_file_",
+    "server:run": "node ./dist/api/bin/www"
   },
   "engines": {
     "node": "^12 || ^14",
