--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.13.0",
     "mongoose": "^5.13.11",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
