--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "cp:www": "mkdirp ./dist/api/bin && cp ./server/bin/www ./dist/api/bin/",
     "delete:lockfile": "rm -f ./node_modules/@angular/compiler-cli/ngcc/ngcc_lock_file_",
     "docker:serve": "ng serve --host 0.0.0.0 --poll 1000",
-    "dev": "npm run delete:lockfile && npm run clean && npm run cp:www && tsc -p ./server/tsconfig.api.json && concurrently -k \"tsc -p ./server/tsconfig.api.json -w\" \"nodemon -r ./dist/api/bin/www --watch\" \"ng build --watch --poll 1000\"",
+    "dev": "npm run delete:lockfile && npm run clean && npm run cp:www && tsc -p ./server/tsconfig.api.json && concurrently -k \"tsc -p ./server/tsconfig.api.json -w\" \"nodemon -r ./dist/api/bin/www --watch\" \"ng serve --poll 1000\"",
     "dev:server": "concurrently -k \"tsc -p ./server/tsconfig.api.json -w\" \"nodemon -r ./dist/api/bin/www --watch\"",
     "build": "npm run clean && npm run cp:www && tsc -p ./server/tsconfig.api.json && ng build",
     "server": "node ./dist/api/bin/www"
@@ -37,6 +37,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
     "mongoose": "^5.13.11",
@@ -54,6 +55,7 @@
     "@angular/cli": "~12.2.9",
     "@angular/compiler-cli": "~12.2.0",
     "@cypress/schematic": "^1.5.1",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/node": "^12.11.1",
